Removing more config site references

--- a/carpentries.tex
+++ b/carpentries.tex
@@ -16,13 +16,13 @@ question to a list, then go through that list. \{: .callout\}
 
 \subsection{History}\label{history}
 
-\href{\{\{\%20site.swc\_site\%20\}\}}{Software Carpentry} was co-founded
+\href{http://software-carpentry.org}{Software Carpentry} was co-founded
 in 1998 by Brent Gorda and Greg Wilson, who identified a need for best
 practices training in research computing. After several iterations, the
 current model of two-day workshops with a standard curriculum emerged in
 2010-11. After intermediate support from various organizations, it
 became an independent non-profit organization called the
-\href{\{\{\%20site.swc\_site\%20\}\}/scf/}{Software Carpentry Foundation}
+\href{http://software-carpentry.org/scf/}{Software Carpentry Foundation}
 (SCF) in 2015. The SCF is now responsible for all aspects of Software
 Carpentry's operations.
 
@@ -31,7 +31,7 @@ Carpentry's operations.
 
 For more on Software Carpentry's history, and on what we've learned
 along the way, see
-\href{\{\{\%20site.swc\_site\%20\}\}/scf/history/}{this page} on its
+\href{http://software-carpentry.org/scf/history/}{this page} on its
 website or the paper
 ``\href{http://f1000research.com/articles/3-62/v2}{Software Carpentry:
 Lessons Learned}''. \{: .callout\}
@@ -40,7 +40,7 @@ Lessons Learned}''. \{: .callout\}
 In 2013, members of the Software Carpentry community identified a need
 for training aimed at computational novices that would teach researchers
 how to properly handle their data. This led to the creation of
-\href{\{\{\%20site.dc\_site\%20\}\}}{Data Carpentry} under the leadership
+\href{http://datacarpentry.org}{Data Carpentry} under the leadership
 of Tracy Teal. While separate, the two organization share many aspects
 of their operations, long-term goals, and community structure:
 
@@ -93,7 +93,7 @@ development and use. Its workshops are:
 \subsection{Workshop Operations}\label{workshop-operations}
 
 We have recorded what we've learned about writing workshops in an
-\href{\{\{\%20site.swc\_site\%20\}\}/workshops/operations/}{operations
+\href{http://software-carpentry.org/workshops/operations/}{operations
 guide} and a set of checklists (linked from that page) that describes
 what everyone involved in a workshop is expected to do and why.
 Questions, corrections, and additions are \emph{very} welcome.
@@ -108,7 +108,7 @@ each meeting, and eventually added to our operations guide.
 \begin{challenge}{How We Do Things}{chal:how-we-do-things}
 
 Go to the
-\href{\{\{\%20site.swc\_site\%20\}\}/workshops/operations/}{operations
+\href{http://software-carpentry.org/workshops/operations/}{operations
 guide} and read the instructions for a regular instructor and for a
 workshop host. What situations might come up that these \emph{don't}
 answer?
@@ -116,7 +116,7 @@ answer?
 
 \subsubsection{What Costs What?}\label{what-costs-what}
 
-Quoting the \href{\{\{\%20site.swc\_site\}\}/workshops/request/}{Software
+Quoting the \href{http://software-carpentry.org/workshops/request/}{Software
 Carpentry workshop request page}:
 
 \begin{quote}
@@ -158,7 +158,7 @@ nonprofit and for-profit scales. Waivers are not required for
 self-organized workshops.
 \end{quote}
 
-Quoting the \href{\{\{\%20site.dc\_site\}\}/workshops-host/}{Data
+Quoting the \href{http://datacarpentry.org/workshops-host/}{Data
 Carpentry workshops page}:
 
 \begin{quote}
@@ -265,16 +265,13 @@ instructor checkout procedure for details.
 
 In order to communicate with learners, and to help us keep track of
 who's taught what and where, each workshop's instructors create a
-one-page website using \href{\{\{\%20site.workshop\_repo\%20\}\}}{this
-template}. Once that has been created, the host or lead instructor sends
-its URL to the \href{\{\{\%20site.contact\%20\}\}}{workshop
-coordinator}, who adds it to our records. The workshop will show up on
+one-page website using our template. Once that has been created, the host or lead instructor sends
+its URL to the workshop coordinator, who adds it to our records. The workshop will show up on
 our websites shortly thereafter.
 
 \begin{challenge}{Practice With SWC Infrastructure}{chal:practice-with-swc-infrastructure}
 
-Go to the \href{\{\{\%20site.workshop\_repo\%20\}\}}{workshop template
-repository} and follow the directions to create a workshop website using
+Go to the workshop template repository and follow the directions to create a workshop website using
 your local location and today's date.
 \end{challenge}
 
@@ -318,24 +315,24 @@ communities:
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.swc\_site\%20\}\}}{Software Carpentry}
+    \href{http://software-carpentry.org}{Software Carpentry}
 
     \begin{itemize}
     \itemsep1pt\parskip0pt\parsep0pt
     \item
-      \href{\{\{\%20site.swc\_site\%20\}\}/blog/}{Blog}
+      \href{http://software-carpentry.org/blog/}{Blog}
     \item
-      \href{\{\{\%20site.swc\_site\%20\}\}/join/}{Get Involved}
+      \href{http://software-carpentry.org/join/}{Get Involved}
     \end{itemize}
   \item
-    \href{\{\{\%20site.dc\_site\%20\}\}}{Data Carpentry}
+    \href{http://datacarpentry.org}{Data Carpentry}
 
     \begin{itemize}
     \itemsep1pt\parskip0pt\parsep0pt
     \item
-      \href{\{\{\%20site.dc\_site\%20\}\}/blog/}{Blog}
+      \href{http://datacarpentry.org/blog/}{Blog}
     \item
-      \href{\{\{\%20site.dc\_site\%20\}\}/involved/}{Get Involved}
+      \href{http://datacarpentry.org/involved/}{Get Involved}
     \end{itemize}
   \end{itemize}
 \item
@@ -414,7 +411,7 @@ before changes are merged.
 Maybe this instructor training has inspired you to go home and write
 your own fantastic lesson! If you'd like to model it after the Software
 and Data Carpentry lesson format, you can go to
-\href{\{\{\%20site.example\_repo\%20\}\}}{this repository} for a template
+\href{fixme}{this repository} for a template
 and instructions.
 
 Writing a new lesson can be a lot of work. While some people have
@@ -486,7 +483,7 @@ the community and find which area will allow you to contribute best.
 \subsubsection{Governance}\label{governance}
 
 Software Carpentry is a democracy: its seven-member
-\href{\{\{\%20site.swc\_site\%20\}\}/scf/}{Steering Committee} is elected
+\href{http://software-carpentry.org/scf/}{Steering Committee} is elected
 annually by and from its membership, which includes every instructor who
 has taught in the two years leading up to the election. The Steering
 Committee has final say on all strategic and financial decisions; if you
