--- a/guide.tex
+++ b/guide.tex
@@ -156,8 +156,7 @@ many other things better too).
     training.
   \end{enumerate}
 \item
-  Administer the \href{\{\{site.training\_post\_survey\}\}}{post-training
-  survey}.
+  Administer the post-training survey.
 \item
   Email attendees about
   the checkout process.
@@ -227,7 +226,7 @@ Sessions}\label{between-instructor-training-sessions}
   Send new instructors
   a completion message.
 \item
-  Badge instructors in \href{\{\{\%20site.amy\_site\%20\}\}/}{AMY}.
+  Badge instructors.
 
   \begin{enumerate}
   \def\labelenumii{\arabic{enumii}.}
@@ -799,95 +798,6 @@ part of a trainee's checkout procedure.
   Add pass/fail information for the trainees in AMY.
 \end{itemize}
 
-\subsubsection{Example Starting Points for
-Demos}\label{example-starting-points-for-demos}
-
-\begin{itemize}
-\itemsep1pt\parskip0pt\parsep0pt
-\item
-  SWC Unix Shell
-
-  \begin{itemize}
-  \itemsep1pt\parskip0pt\parsep0pt
-  \item
-    \href{\{\{\%20site.swc\_pages\%20\}\}/shell-novice/03-create/}{03-create}
-  \item
-    \href{\{\{\%20site.swc\_pages\%20\}\}/shell-novice/05-loop/}{05-loop}
-  \item
-    \href{\{\{\%20site.swc\_pages\%20\}\}/shell-novice/06-script/}{06-script}
-  \end{itemize}
-\item
-  SWC, python gapminder
-
-  \begin{itemize}
-  \itemsep1pt\parskip0pt\parsep0pt
-  \item
-    \href{\{\{\%20site.swc\_pages\%20\}\}/python-novice-gapminder/06-libraries/}{06-libraries}
-  \end{itemize}
-\item
-  SWC, python novice inflammation
-
-  \begin{itemize}
-  \itemsep1pt\parskip0pt\parsep0pt
-  \item
-    \href{\{\{\%20site.swc\_pages\%20\}\}/python-novice-inflammation/03-lists/}{03-lists}
-  \item
-    \href{\{\{\%20site.swc\_pages\%20\}\}/python-novice-inflammation/06-func/}{06-func}
-  \end{itemize}
-\item
-  SWC, Automation and Make
-
-  \begin{itemize}
-  \itemsep1pt\parskip0pt\parsep0pt
-  \item
-    \href{\{\{\%20site.swc\_pages\%20\}\}/make-novice/03-variables/}{03-variables}
-  \end{itemize}
-\item
-  SWC, SQL
-
-  \begin{itemize}
-  \itemsep1pt\parskip0pt\parsep0pt
-  \item
-    \href{\{\{\%20site.swc\_pages\%20\}\}/sql-novice-survey/02-sort-dup/}{02-sort-dup}
-  \end{itemize}
-\item
-  SWC, Matlab
-
-  \begin{itemize}
-  \itemsep1pt\parskip0pt\parsep0pt
-  \item
-    \href{\{\{\%20site.swc\_pages\%20\}\}/matlab-novice-inflammation/03-loops/}{03-loops}
-  \end{itemize}
-\item
-  SWC, R for Reproducible Scientific Analysis
-
-  \begin{itemize}
-  \itemsep1pt\parskip0pt\parsep0pt
-  \item
-    \href{\{\{\%20site.swc\_pages\%20\}\}/r-novice-gapminder/07-control-flow/}{07-control-flow}
-  \end{itemize}
-\item
-  DC, python ecology
-
-  \begin{itemize}
-  \itemsep1pt\parskip0pt\parsep0pt
-  \item
-    \href{\{\{\%20site.dc\_site\%20\}\}/python-ecology-lesson/02-index-slice-subset}{02-index-slice-subset}
-  \end{itemize}
-\item
-  DC R ecology
-
-  \begin{itemize}
-  \itemsep1pt\parskip0pt\parsep0pt
-  \item
-    \href{\{\{\%20site.dc\_site\%20\}\}/R-ecology-lesson/04-dplyr.html}{04-dplyr}
-  \item
-    \href{\{\{\%20site.dc\_site\%20\}\}/R-ecology-lesson/05-visualization-ggplot2.html}{05-visualization-ggplot2.html}
-    (actually,
-    \href{\{\{\%20site.dc\_site\%20\}\}/R-ecology-lesson/05-visualization-ggplot2.html\#plotting-with-ggplot2}{plotting-with-ggplot2})
-  \end{itemize}
-\end{itemize}
-
 \subsection{Terms}\label{terms}
 
 \begin{discussion}{Something to Think About}{disc:something-to-think-about}
@@ -1136,9 +1046,9 @@ survivor bias.
 The Carpentries' greatest weakness is a lack of systematic assessment:
 while we have done some small-scale studies of the impact we have on our
 learners, and Dr.~Beth Duckles' studies of
-\href{\{\{\%20site.swc\_site\%20\}\}/files/bib/duckles-instructor-engagement-2016.pdf}{why
+\href{http://software-carpentry.org/files/bib/duckles-instructor-engagement-2016.pdf}{why
 instructors join us} and
-\href{\{\{\%20site.swc\_site\%20\}\}/files/bib/duckles-non-instructor-report-2016.pdf}{why
+\href{http://software-carpentry.org/files/bib/duckles-non-instructor-report-2016.pdf}{why
 people qualify but then don't teach} are very insightful, we still don't
 know what learners actually adopt or what effect it has on their
 productivity, the reproducibility of their work, and so on.
