--- a/lessons.tex
+++ b/lessons.tex
@@ -62,7 +62,7 @@ affected by changes.
 
 \begin{challenge}{Learner Profiles}{chal:learner-profiles}
 
-Read \href{\{\{\%20site.swc\_site\%20\}\}/audience/}{Software Carpentry's
+Read \href{http://software-carpentry.org/audience/}{Software Carpentry's
 learner profiles} and then write one that describes a fictional
 colleague of your own. Who are they, what problems do they face, and how
 will this training help them? Try to be as specific as possible.
@@ -461,14 +461,14 @@ languages.
 
 \subsubsection{Data Carpentry}\label{data-carpentry}
 
-Data Carpentry's \href{\{\{\%20site.dc\_site\%20\}\}/lessons/}{lessons}
+Data Carpentry's \href{http://datacarpentry.org/lessons/}{lessons}
 are domain-specific and cover data organization, manipulation, and
 visualization skills relevant to the target domain. These goals include:
 
 \begin{itemize}
 \itemsep1pt\parskip0pt\parsep0pt
 \item
-  \href{\{\{\%20site.dc\_site\%20\}\}/lessons/\#ecology-workshop}{Ecology}
+  \href{http://datacarpentry.org/lessons/\#ecology-workshop}{Ecology}
 
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
@@ -478,7 +478,7 @@ visualization skills relevant to the target domain. These goals include:
     data.
   \end{itemize}
 \item
-  \href{\{\{\%20site.dc\_site\%20\}\}/lessons/\#genomics-workshop}{Genomics}
+  \href{http://datacarpentry.org/lessons/\#genomics-workshop}{Genomics}
 
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
@@ -488,7 +488,7 @@ visualization skills relevant to the target domain. These goals include:
     resources.
   \end{itemize}
 \item
-  \href{\{\{\%20site.dc\_site\%20\}\}/lessons/\#geospatial-data-workshop}{Geospatial
+  \href{http://datacarpentry.org/lessons/\#geospatial-data-workshop}{Geospatial
   Data}
 \end{itemize}
 
@@ -497,10 +497,10 @@ There are also materials in development and testing for:
 \begin{itemize}
 \itemsep1pt\parskip0pt\parsep0pt
 \item
-  \href{\{\{\%20site.dc\_site\%20\}\}/lessons/\#social-science-materials}{Social
+  \href{http://datacarpentry.org/lessons/\#social-science-materials}{Social
   Science}
 \item
-  and \href{\{\{\%20site.dc\_site\%20\}\}/semester-biology/}{a
+  and \href{http://datacarpentry.org/semester-biology/}{a
   semester-long Biology course}.
 \end{itemize}
 
