--- a/motivation.tex
+++ b/motivation.tex
@@ -192,7 +192,7 @@ Workshop}\label{things-you-shouldnt-do-in-a-workshop}
 Rules}\label{the-importance-of-having-rules}
 
 Software Carpentry and Data Carpentry share a
-\href{\{\{\%20site.swc\_site\%20\}\}/conduct/}{code of conduct}, and all
+Code of Conduct, and all
 participants in our workshops are required to abide by it. Its details
 are important, but the most important thing about it is that it exists:
 knowing that we have rules tells people a great deal about our values
@@ -382,7 +382,7 @@ report}, we still have some work to do\ldots{})
 The third, and most important, is to \emph{involve people with
 disabilities in decision-making}. Our mailing lists are a good place to
 ask for advice, and updates to
-\href{\{\{\%20site.swc\_site\%20\}\}/workshops/checklists/accessibility/}{our
+\href{http://software-carpentry.org/workshops/checklists/accessibility/}{our
 accessibility checklist} are always welcome.
 
 \begin{quote}
