--- a/reference.tex
+++ b/reference.tex
@@ -36,7 +36,7 @@
 \itemsep1pt\parskip0pt\parsep0pt
 \item
   Everyone in our community is required to abide by our
-  \href{\{\{\%20site.swc\_site\%20\}\}/conduct/}{Code of Conduct}, both
+  Code of Conduct, both
   at workshops and online, to ensure that everyone else feels welcome.
 \item
   You teach our material, not your own, and you need to work through the
